# AniGen

./: .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  app.py  example.py  example_mps.py  requirements-mac.txt  requirements.txt  setup.sh  train.py
anigen/4drecon/: README.md  clean_faces.py  davis.py  export_rig.py  fit_utils.py  fit_video.py  fit_video_loma.py  geodesic.py  geometry.py  loma_match.py  paths.py  pose_init.py  prep_video.py  refine_pose.py  refine_skin_texture_loma.py  render_results.py  render_showcase.py  render_skeleton.py  render_views.py  renderer.py  run.sh  run_all.sh  run_cotracker.py  run_spatracker.py  sam3_seg.py  symmetrize_colors.py  tracks.py  viz_tracks.py
anigen/datasets/: __init__.py  anigen_sparse_feat2skeleton.py  anigen_sparse_structure.py  anigen_sparse_structure_latent.py  anigen_structured_latent.py  components.py
anigen/pipelines/: base.py  (+1 more)
anigen_mps/: __init__.py  knn_cpu.py
configs/: anigen_skin_ae.json  slat_dae.json  slat_flow_auto.json  ss_dae.json  ss_flow_duet.json
extensions/CUBVH/: LICENSE  install.sh  pyproject.toml  readme.md
extensions/CUBVH/cubvh/: api.py
extensions/CUBVH/docs/: bvh_state_device_log.md
extensions/CUBVH/include/gpu/: api_gpu.h  bvh.cuh  triangle.cuh
extensions/CUBVH/src/: api_gpu.cu  bindings.cpp  bvh.cu
scripts/: probe_sparse_ops.py  setup_mac.sh
tests/: test_setup_blackwell.sh
video_editing/: README.md  _media.py  _pointcloud.py  agent_motion.py  blender_export.py  camera_agent.py  common.py  compose_and_render.py  edit.py  fill_bg_holes.py  reanimate.py
(+52 files in other folders)
